--- a/web/package.json
+++ b/web/package.json
@@ -30,8 +30,8 @@
     },
     "dependencies": {
         "@eversdk/appkit": "^0.3.1",
-        "@eversdk/core": "^1.35.0",
-        "@eversdk/lib-web": "^1.35.0",
+        "@eversdk/core": "1.35.1",
+        "@eversdk/lib-web": "1.35.1",
         "@fortawesome/fontawesome-svg-core": "^6.1.1",
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -58,6 +58,7 @@
         "react-toastify": "^8.2.0",
         "recoil": "^0.7.0",
         "recoil-persist": "^4.1.0",
+        "web-common": "file:../web-common",
         "web-vitals": "^2.1.0",
         "yup": "^0.32.11"
     },
