--- a/git-remote-gosh/Cargo.toml
+++ b/git-remote-gosh/Cargo.toml
@@ -56,12 +56,12 @@ sha256 = '1.0.3'
 shellexpand = '^2.1.0'
 test-log = '^0'
 tokio-retry = '^0'
-tracing-log = '^0.1.3'
 derive_builder = '^0.11'
+tracing-log = '^0.1.3'
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
 tracing-opentelemetry = "0.18.0"
-opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
-opentelemetry-otlp = { version = "0.11.0", features = ["grpc-tonic"] }
+opentelemetry = { version = "0.18.0", features = ["rt-tokio", "trace"] }
+opentelemetry-otlp = { version = "0.11.0", features = ["grpc-tonic", "trace"] }
 opentelemetry-semantic-conventions = "0.10.0"
 
 [dependencies.data-contract-macro-derive]
