--- a/.github/workflows/cargo-builds.yml
+++ b/.github/workflows/cargo-builds.yml
@@ -14,4 +14,5 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Build project
+        working-directory: git-remote-gosh
         run: cargo build --release
