--- a/.github/workflows/cargo-builds.yml
+++ b/.github/workflows/cargo-builds.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         include:
+          - os: windows-2019
           - os: ubuntu-20.04
           - os: macos-12
     steps:
