--- a/.github/workflows/cargo-builds.yml
+++ b/.github/workflows/cargo-builds.yml
@@ -41,3 +41,9 @@ jobs:
         working-directory: git-remote-gosh
         run: |
           cargo build --release
+          ls -la 
+          ls -la target
+          ls -la target/release
+          ls -lR
+          ls -la target/release/git-remote-gosh
+          ls -lR target/release/git-remote-gosh
