--- a/.github/workflows/cargo-builds.yml
+++ b/.github/workflows/cargo-builds.yml
@@ -25,11 +25,11 @@ jobs:
       matrix:
         include:
           - os: windows-2019
-            bin: git-remote-gosh-windows-amd64
+            bin_name: git-remote-gosh-windows-amd64
           - os: ubuntu-20.04
-            bin: git-remote-gosh-linux-amd64
+            bin_name: git-remote-gosh-linux-amd64
           - os: macos-12
-            bin: git-remote-gosh-darwin-amd64
+            bin_name: git-remote-gosh-darwin-amd64
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
