--- a/.ci/azure/git-remote-gosh-pipeline.yml
+++ b/.ci/azure/git-remote-gosh-pipeline.yml
@@ -1,6 +1,6 @@
 variables:
 - name: RUSTUP_TOOLCHAIN
-  value: 1.68.0
+  value: 1.70.0
 
 trigger: none
 pr: none
@@ -45,7 +45,7 @@ steps:
 # Linux
 - script: |
     set -ex
-    sudo apt install -y protobuf-compiler make clang pkg-config libssl-dev libc6-dev-armhf-cross
+    sudo apt install -y protobuf-compiler libc6-dev-armhf-cross
   condition: eq( variables['Agent.OS'], 'Linux' )
   displayName: Install pre-requirements Linux
 # Mac
@@ -91,13 +91,13 @@ steps:
   displayName: Prepare resources
    
 # Linux
-- script: |
-    set -ex
-    sudo apt update -y
-    cargo build --release
-  workingDirectory: $(versionNo)/git-remote-gosh
-  condition: eq( variables['Agent.OS'], 'Linux' )
-  displayName: Build Linux amd64
+#- script: |
+#    set -ex
+#    sudo apt update -y
+#    cargo build --release
+#  workingDirectory: $(versionNo)/git-remote-gosh
+#  condition: eq( variables['Agent.OS'], 'Linux' )
+#  displayName: Build Linux amd64
 
 - script: |
     set -ex
