--- a/.ci/azure/git-remote-gosh-pipeline.yml
+++ b/.ci/azure/git-remote-gosh-pipeline.yml
@@ -45,7 +45,7 @@ steps:
 # Linux
 - script: |
     set -ex
-    sudo apt install -y protobuf-compiler libc6-dev-armhf-cross
+    sudo apt install -y protobuf-compiler
   condition: eq( variables['Agent.OS'], 'Linux' )
   displayName: Install pre-requirements Linux
 # Mac
@@ -102,7 +102,7 @@ steps:
 - script: |
     set -ex
     sudo apt update -y
-    sudo apt install -y build-essential g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu
+    sudo apt install -y build-essential g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu libc6-dev-armhf-cross libc6-dev
     rustup target add aarch64-unknown-linux-gnu 
     cargo build --release --target aarch64-unknown-linux-gnu
   env:
