--- a/.ci/azure/git-remote-gosh-pipeline.yml
+++ b/.ci/azure/git-remote-gosh-pipeline.yml
@@ -103,10 +103,11 @@ steps:
     set -ex
     sudo apt update -y
     dpkg -S libc-header-start.h
+    rustc --print sysroot
     #sudo mkdir /usr/include/bits/
     #sudo ln -s /usr/include/x86_64-linux-gnu/bits /usr/include/
     #sudo ln -s /usr/include/x86_64-linux-gnu/bits /usr/include/
-    sudo cp -r /usr/include/x86_64-linux-gnu/* /usr/include/
+    #sudo cp -r /usr/include/x86_64-linux-gnu/* /usr/include/
     sudo apt install -y build-essential g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu
     rustup target add aarch64-unknown-linux-gnu 
     cargo build --release --target aarch64-unknown-linux-gnu
@@ -117,6 +118,7 @@ steps:
     CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
     CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
     CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
+    BINDGEN_EXTRA_CLANG_ARGS": '--sysroot /usr/arm-linux-gnueabi'
   workingDirectory: $(versionNo)/git-remote-gosh
   condition: and(eq(variables['Agent.OS'], 'Linux'), eq(variables['DRYRUN'], 'false'))
   displayName: Build Linux arm64
