--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -4,16 +4,32 @@ on: workflow_dispatch
 
 env:
   CARGO_TERM_COLOR: always
+  CARGO_INCREMENTAL: 0
+  CARGO_NET_RETRY: 10
+  RUST_BACKTRACE: full
+  RUSTFLAGS: -D warnings
+  RUSTUP_MAX_RETRIES: 10
+  CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
+  CARGO_PROFILE_RELEASE_LTO: true
 
 jobs:
   build:
-    runs-on:
-      - ubuntu-latest
-      - macos-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      fail-fast: true
+
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v4
+
     - name: Install Protoc
       uses: arduino/setup-protoc@v2
+
     - name: Build
-      run: cd gosh-dispatcher && cargo build --verbose --release
+      run: cd gosh-dispatcher && cargo build --verbose --locked --release
