--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -14,22 +14,43 @@ env:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-
+    runs-on: "${{ matrix.os }}"
     strategy:
       fail-fast: true
-
       matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
+        include:
+          - os: macos-latest
+          - os: ubuntu-latest
+          - os: windows-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Install Protoc
-      uses: arduino/setup-protoc@v2
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cargo/registry
+          key: "${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}"
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cargo/git
+          key: "${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}"
+      - uses: actions/cache@v1
+        with:
+          path: target
+          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
 
-    - name: Build
-      run: cd gosh-dispatcher && cargo build --verbose --locked --release
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v2
+
+      - name: test protoc
+        run: |
+          which protoc
+
+      - name: Build
+        run: cd gosh-dispatcher && cargo build --verbose --locked --release
