--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -19,14 +19,23 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - os: macos-latest
+          # - os: macos-latest
+          #   target: aarch64-apple-darwin
+          # - os: macos-latest
+          #   target: x86_64-apple-darwin
           - os: ubuntu-latest
-          - os: windows-latest
+            target: aarch64-unknown-linux-gnu
+          # - os: ubuntu-latest
+          #   target: x86_64-unknown-linux-gnu
+          # - os: windows-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          submodules: true
 
+      # Cache
       - uses: actions/cache@v1
         with:
           path: ~/.cargo/registry
@@ -37,20 +46,26 @@ jobs:
           key: "${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}"
       - uses: actions/cache@v1
         with:
-          path: target
+          path: ${{ github.workspace }}/target
           key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
+          target: ${{ matrix.target }}
           override: true
 
       - name: Install Protoc
         uses: arduino/setup-protoc@v2
 
-      - name: test protoc
-        run: |
-          which protoc
-
       - name: Build
-        run: cd gosh-dispatcher && cargo build --verbose --release
+        env:
+          CARGO_TARGET_DIR: ${{ github.workspace }}/target
+        run: |
+          cd gosh-dispatcher && cargo build --verbose --release --target=${{ matrix.target }}
+          ls -lA
+          cd ${{ github.workspace }}
+          ls -lA
+          ls -lA target
+          ls -lA target/${{ matrix.target }}
