--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,75 +1,114 @@
 name: Release
 
+on: workflow_dispatch
+
 permissions:
-  # TODO: once `releases: write` is supported, use it instead.
   contents: write
 
-on:
-  workflow_dispatch:
-  push:
-    tags:
-      - v[0-9]+.*
-
 env:
+  CARGO_TERM_COLOR: always
   CARGO_INCREMENTAL: 0
   CARGO_NET_RETRY: 10
-  CARGO_TERM_COLOR: always
-  # RUST_BACKTRACE: full
-  # RUSTFLAGS: -D warnings
+  RUST_BACKTRACE: full
+  RUSTFLAGS: -D warnings
   RUSTUP_MAX_RETRIES: 10
-
-defaults:
-  run:
-    shell: bash
+  CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
+  CARGO_PROFILE_RELEASE_LTO: true
 
 jobs:
-  create-release:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: taiki-e/create-gh-release-action@v1
-        with:
-          draft: true
-          changelog: CHANGELOG.md
-          title: $version
-          branch: main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  upload-assets:
-    name: ${{ matrix.target }}
-    if: github.repository_owner == 'taiki-e'
-    needs:
-      - create-release
+  build:
+    runs-on: "${{ matrix.os }}"
     strategy:
+      fail-fast: true
       matrix:
         include:
-          - target: aarch64-unknown-linux-gnu
-          - target: x86_64-unknown-linux-gnu
-          - target: aarch64-apple-darwin
-            os: macos-latest
-          - target: x86_64-pc-windows-msvc
-            os: windows-latest
-    runs-on: ${{ matrix.os || 'ubuntu-18.04' }}
+          # - os: macos-latest
+          #   target: aarch64-apple-darwin
+          #   name: git-remote-gosh-darwin-arm64
+          # - os: macos-latest
+          #   target: x86_64-apple-darwin
+          #   name: git-remote-gosh-darwin-amd64
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            name: git-remote-gosh-linux-arm64
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            name: git-remote-gosh-linux-amd64
+          # - os: windows-latest
+          #   target: x86_64-pc-windows-msvc
+          #   name: git-remote-gosh-windows-amd64
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
         with:
-          persist-credentials: false
-      - name: Build
-        run: |
-          cd gosh-dispatcher
-          cargo build --release --verbose
-      # - uses: taiki-e/github-actions/install-rust@main
-      #   with:
-      #     toolchain: stable
-      - run: echo "RUSTFLAGS=${RUSTFLAGS} -C target-feature=+crt-static" >> "${GITHUB_ENV}"
-        if: endsWith(matrix.target, 'windows-msvc')
-      - uses: taiki-e/upload-rust-binary-action@v1
+          submodules: true
+
+      # Cache
+      - uses: actions/cache@v1
         with:
-          bin: cargo-hack
+          path: ~/.cargo/registry
+          key: "${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}"
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cargo/git
+          key: "${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ github.workspace }}/target
+          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
           target: ${{ matrix.target }}
-          tar: all
-          zip: windows
+          override: true
+
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v2
+
+      - name: Build
+        shell: bash
+        env:
+          CARGO_BUILD_TARGET: ${{ github.workspace }}/target
+        run: |
+          set -xe
+
+          mkdir -p ${{ matrix.name }}
+          cat <<EOF >${{ matrix.name }}/dispatcher.ini
+          git-remote-gosh_v1_0_0
+          git-remote-gosh_v2_0_0
+          git-remote-gosh_v3_0_0
+          git-remote-gosh_v4_0_0
+          git-remote-gosh_v5_0_0
+          git-remote-gosh_v5_1_0
+          git-remote-gosh_v6_0_0
+          git-remote-gosh_v6_1_0
+          EOF
+
+          cd ${{ github.workspace }}/gosh-dispatcher
+          cargo build --release --target=${{ matrix.target }}
+
+          cd ${{ github.workspace }}/v6_x/v6.0.0/git-remote-gosh
+          make copy_abi
+          cargo build --release --target=${{ matrix.target }}
+
+          cd ${{ github.workspace }}/v6_x/v6.1.0/git-remote-gosh
+          make copy_abi
+          cargo build --release --target=${{ matrix.target }}
+
+          mv ${{ github.workspace }}/target/${{ matrix.target }}/release/git-remote-gosh* ${{ github.workspace }}/${{ matrix.name }}/
+
+          ls -lA ${{ github.workspace }}/${{ matrix.name }}
+          cd ${{ github.workspace }}
+          tar -czvf ${{ matrix.name }}.tar.gz -C ${{ matrix.name }} .
+
+      - name: Publish
+        uses: softprops/action-gh-release@v1
+        with:
+          prerelease: true
+          files: |
+            ${{ matrix.name }}.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
-          CARGO_PROFILE_RELEASE_LTO: true
