--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,9 +28,9 @@ jobs:
           # - os: macos-latest
           #   target: x86_64-apple-darwin
           #   name: git-remote-gosh-darwin-amd64
-          - os: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-            name: git-remote-gosh-linux-arm64
+          # - os: ubuntu-latest
+          #   target: aarch64-unknown-linux-gnu
+          #   name: git-remote-gosh-linux-arm64
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             name: git-remote-gosh-linux-amd64
