--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,12 +36,12 @@ jobs:
           # - os: macos-latest
           #   target: x86_64-apple-darwin
           #   name: git-remote-gosh-darwin-amd64
-          - os: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-            name: git-remote-gosh-linux-arm64
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            name: git-remote-gosh-linux-amd64
+          # - os: ubuntu-latest
+          #   target: aarch64-unknown-linux-gnu
+          #   name: git-remote-gosh-linux-arm64
+          # - os: ubuntu-latest
+          #   target: x86_64-unknown-linux-gnu
+          #   name: git-remote-gosh-linux-amd64
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             name: git-remote-gosh-windows-amd64
@@ -59,10 +59,10 @@ jobs:
         with:
           path: ~/.cargo/git
           key: "${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}"
-      - uses: actions/cache@v1
-        with:
-          path: ${{ github.workspace }}/target
-          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+      # - uses: actions/cache@v1
+      #   with:
+      #     path: ${{ github.workspace }}/target
+      #     key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
       - uses: actions-rs/toolchain@v1
         with:
@@ -82,25 +82,31 @@ jobs:
           sudo apt install -y build-essential g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
 
+      - name: Add cross compile Linux tools
+        if: ${{ matrix.os == 'windows-latest' }}
+        shell: bash
+        run: |
+          choco install openssl
+
       - name: Build dispatcher
         shell: bash
         run: |
           mkdir -p '${{ matrix.name }}'
-          tee <<EOF '${{ matrix.name }}/dispatcher.ini'
-          git-remote-gosh_v1_0_0
-          git-remote-gosh_v2_0_0
-          git-remote-gosh_v3_0_0
-          git-remote-gosh_v4_0_0
-          git-remote-gosh_v5_0_0
-          git-remote-gosh_v5_1_0
-          git-remote-gosh_v6_0_0
-          git-remote-gosh_v6_1_0
-          EOF
+      #     tee <<EOF '${{ matrix.name }}/dispatcher.ini'
+      #     git-remote-gosh_v1_0_0
+      #     git-remote-gosh_v2_0_0
+      #     git-remote-gosh_v3_0_0
+      #     git-remote-gosh_v4_0_0
+      #     git-remote-gosh_v5_0_0
+      #     git-remote-gosh_v5_1_0
+      #     git-remote-gosh_v6_0_0
+      #     git-remote-gosh_v6_1_0
+      #     EOF
 
-          cd gosh-dispatcher
-          cargo build --release --target=${{ matrix.target }}
-          mv target/${{ matrix.target }}/release/git-remote-gosh* '${{ github.workspace }}/${{ matrix.name }}'
-          rm -rf target
+      #     cd gosh-dispatcher
+      #     cargo build --release --target=${{ matrix.target }}
+      #     mv target/${{ matrix.target }}/release/git-remote-gosh* '${{ github.workspace }}/${{ matrix.name }}'
+      #     rm -rf target
 
       - name: Build 6.0.0
         shell: bash
@@ -111,14 +117,14 @@ jobs:
           mv target/${{ matrix.target }}/release/git-remote-gosh* '${{ github.workspace }}/${{ matrix.name }}'
           rm -rf target
 
-      - name: Build 6.1.0
-        shell: bash
-        run: |
-          cd v6_x/v6.1.0/git-remote-gosh
-          make copy_abi
-          cargo build --release --target=${{ matrix.target }}
-          mv target/${{ matrix.target }}/release/git-remote-gosh* '${{ github.workspace }}/${{ matrix.name }}'
-          rm -rf target
+      # - name: Build 6.1.0
+      #   shell: bash
+      #   run: |
+      #     cd v6_x/v6.1.0/git-remote-gosh
+      #     make copy_abi
+      #     cargo build --release --target=${{ matrix.target }}
+      #     mv target/${{ matrix.target }}/release/git-remote-gosh* '${{ github.workspace }}/${{ matrix.name }}'
+      #     rm -rf target
 
       - uses: actions/upload-artifact@v3
         with:
