--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,8 @@ env:
   CARGO_INCREMENTAL: 0
   CARGO_NET_RETRY: 10
   RUST_BACKTRACE: full
-  RUSTFLAGS: -D warnings
+  ## warnings -> errors
+  # RUSTFLAGS: -D warnings
   RUSTUP_MAX_RETRIES: 10
   CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
   CARGO_PROFILE_RELEASE_LTO: true
