--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,7 @@ jobs:
   build:
     runs-on: "${{ matrix.os }}"
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         name:
           # - git-remote-gosh-darwin-arm64
