--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,7 +34,7 @@ jobs:
         name:
           # - git-remote-gosh-darwin-arm64
           # - git-remote-gosh-darwin-amd64
-          # - git-remote-gosh-linux-arm64
+          - git-remote-gosh-linux-arm64
           - git-remote-gosh-linux-amd64
         bin:
           - git-remote-gosh
@@ -61,9 +61,9 @@ jobs:
           # - name: git-remote-gosh-darwin-amd64
           #   os: macos-latest
           #   target: x86_64-apple-darwin
-          # - name: git-remote-gosh-linux-arm64
-          #   os: ubuntu-latest
-          #   target: aarch64-unknown-linux-gnu
+          - name: git-remote-gosh-linux-arm64
+            os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
           - name: git-remote-gosh-linux-amd64
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
