--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,10 +30,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        os:
+          - ubuntu-latest
         name:
           # - git-remote-gosh-darwin-arm64
           # - git-remote-gosh-darwin-amd64
-          - git-remote-gosh-linux-arm64
+          # - git-remote-gosh-linux-arm64
           - git-remote-gosh-linux-amd64
         bin:
           - git-remote-gosh
