--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -75,18 +75,19 @@ jobs:
         uses: actions/checkout@v4
 
       # Cache
-      - uses: actions/cache@v1
+      - name: Set up cargo cache key: ${{ runner.os }}-cargo-${{ hashFiles(format('{0}/Cargo.lock', matrix.dir)) }}
+        uses: actions/cache@v3
+        continue-on-error: false
         with:
-          path: ~/.cargo/registry
-          key: "${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}"
-      - uses: actions/cache@v1
-        with:
-          path: ~/.cargo/git
-          key: "${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}"
-      - uses: actions/cache@v1
-        with:
-          path: ${{ matrix.dir }}/target
-          key: ${{ matrix.target }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            ${{ matrix.dir }}/target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles(format('{0}/Cargo.lock', matrix.dir)) }}
+          # key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo-
 
       - uses: actions-rs/toolchain@v1
         with:
